# Haskell-Minesweeper

./: LICENSE  Main.hs  Makefile  README.md  tuke-minesweeper.cabal
Minesweeper/: Board.hs  ComputerSolver.hs  HumanSolver.hs  UI.hs
