cabal-version:      >=1.10

name:               tuke-minesweeper
version:            0.1.0.0
synopsis:           Simple console minesweeper game
license:            MIT
license-file:       LICENSE
author:             Sergej Chodarev
build-type:         Simple

executable minesweeper
  main-is:          Main.hs
  other-modules:    Minesweeper.Board,
                    Minesweeper.UI,
                    Minesweeper.HumanSolver,
                    Minesweeper.ComputerSolver
  build-depends:    base >=4.12 && <5,
                    containers ==0.6.*,
                    random ==1.2.1.*
  default-language: Haskell2010
  ghc-options:      -Wall
